# assistent_voice-backend

./: .dockerignore  .gitignore  CONVERSATION_STORAGE.md  Dockerfile  app.py  fly.toml  pyproject.toml  requirements.txt  test.py
llm/: conversation.py  llm.py
llm/prompt/: prompt.py
llm/transcripte/: transcripte.py
transcription/: transcription.py
tts/: model_tts.py
