[project]
name = "assistent-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.116.0",
    "kokoro>=0.7.16",
    "numpy>=2.2.6",
    "openai>=1.93.3",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
]
